Increase navbar shadow. Un-justify post text. Fix code syntax overflow.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -637,6 +637,18 @@ p {
   position: absolute;
 }
 
+.highlight pre code * {
+  white-space: nowrap;
+}
+
+.highlight pre {
+  overflow-x: auto;
+}
+
+.highlight pre code {
+  white-space: pre;
+}
+
 /**
   * This injects all of Tailwind's utility classes, generated based on your
   * config file.
